# drr

./: .gitattributes  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md
Documentation/: drr.ipynb
Launch/: CMakeLists.txt  FilterRunner.cpp  FilterRunner.hpp  FilterTester.cpp  FilterTester.hpp  Start.cpp  Utility.hpp
Plot/: Masked.py  Profiler.py  ProfilerResult.py  Quantisation.py  Split.py  drr-plot.py  requirements.txt
Plot/ArgumentGroup/: ImageFormat.py  MultiProcess.py  __init__.py
Program/DisRegRep/: CMakeLists.txt  Format.hpp  ThreadPool.cpp  ThreadPool.hpp
Program/DisRegRep/Container/: ContainerTrait.hpp  FixedHeapArray.hpp  HistogramCache.cpp  HistogramCache.hpp  RegionMap.cpp  RegionMap.hpp  SingleHistogram.cpp  SingleHistogram.hpp  TrivialArrayList.hpp
Program/DisRegRep/Factory/: RandomRegionFactory.cpp  RandomRegionFactory.hpp  RegionMapFactory.cpp  RegionMapFactory.hpp  VoronoiRegionFactory.cpp  VoronoiRegionFactory.hpp
Program/DisRegRep/Filter/: BruteForceFilter.cpp  BruteForceFilter.hpp  RegionMapFilter.hpp  SingleHistogramFilter.cpp  SingleHistogramFilter.hpp
Program/DisRegRep/Maths/: Arithmetic.hpp  Indexer.hpp
Programme/: Utility.hpp
Programme/DisRegRep-Programme/: CMakeLists.txt  Main.cpp  YamlConverter.hpp  splatting-profiler.yaml
Programme/DisRegRep-Programme/Generator/: CMakeLists.txt  Regionfield.cpp  Regionfield.hpp  Tiff.cpp  Tiff.hpp
Programme/DisRegRep-Programme/Profiler/: CMakeLists.txt  Driver.cpp  Driver.hpp  Splatting.cpp  Splatting.hpp
Programme/Profiler/: Splatting.hpp
Source/DisRegRep/: Arithmetic.hpp  CMakeLists.txt  Exception.cpp  Format.hpp  Range.hpp  Type.hpp
Source/DisRegRep/Container/: BlendHistogram.cpp  BlendHistogram.hpp  CMakeLists.txt  CombineKernel.cpp  CombineKernel.hpp  HistogramCache.cpp  HistogramCache.hpp  ImportanceCache.cpp  ImportanceCache.hpp  RegionMap.hpp  Regionfield.cpp  Regionfield.hpp  SingleHistogram.cpp  SingleHistogram.hpp  SparseBin.hpp  SparseMatrixElement.hpp  SplatKernel.cpp  SplatKernel.hpp  Splatting.cpp  Splatting.hpp  SplattingCoefficient.cpp  SplattingCoefficient.hpp  Trait.hpp
Source/DisRegRep/Core/: Arithmetic.hpp  CMakeLists.txt  Exception.cpp  Exception.hpp  Range.hpp  Type.hpp  UninitialisedAllocator.hpp  XXHash.cpp  XXHash.hpp
Source/DisRegRep/Factory/: RandomRegionFactory.cpp  RandomRegionFactory.hpp  RegionMapFactory.hpp  VoronoiRegionFactory.hpp
Source/DisRegRep/Filter/: BruteForceFilter.cpp  BruteForceFilter.hpp  ExplicitRegionAreaFilter.cpp  ExplicitRegionAreaFilter.hpp  ExplicitRegionAreaSAFilter.cpp  ExplicitRegionAreaSAFilter.hpp  FastRegionAreaFilter.cpp  FastRegionAreaFilter.hpp  FilterTrait.hpp  OriginalRegionAreaFilter.cpp  OriginalRegionAreaFilter.hpp  RegionMapFilter.hpp  SingleHistogramFilter.hpp
Source/DisRegRep/ImportanceComputer/: CMakeLists.txt  VanillaFullOccupancy.cpp  VanillaFullOccupancy.hpp
Source/DisRegRep/Launch/: FilterRunner.cpp  FilterTester.cpp  FilterTester.hpp  Start.cpp  ThreadPool.cpp  ThreadPool.hpp  Utility.hpp
Source/DisRegRep/Launch/System/: Platform.hpp
Source/DisRegRep/Math/: Arithmetic.hpp  CMakeLists.txt
Source/DisRegRep/Maths/: Arithmetic.hpp  Indexer.hpp
Source/DisRegRep/Profiler/: CMakeLists.txt  ThreadPool.cpp
Source/DisRegRep/Profiler/ImportanceComputer/: Driver.cpp
Source/DisRegRep/Profiler/System/: ProcessThreadControl.cpp  ProcessThreadControl.hpp
Source/DisRegRep/RegionfieldGenerator/: Base.cpp  Base.hpp  CMakeLists.txt  Uniform.cpp  Uniform.hpp  VoronoiDiagram.cpp
Source/DisRegRep/Splatting/: Base.hpp  BaseFullConvolution.cpp  BaseFullConvolution.hpp  FastFullOccupancy.cpp  FastFullOccupancy.hpp  ImplementationHelper.hpp  Trait.hpp  VanillaFullOccupancy.hpp
Test/DisRegRep-Test/: CMakeLists.txt  Main.cpp  StringMaker.hpp
Test/DisRegRep-Test/Container/: CMakeLists.txt  Regionfield.cpp  SparseMatrixElement.cpp  SplatKernel.cpp  SplattingCoefficient.cpp
Test/DisRegRep-Test/Core/: Arithmetic.cpp  Bit.cpp  CMakeLists.txt  ThreadPool.cpp
Test/DisRegRep-Test/Core/View/: Arithmetic.cpp  CMakeLists.txt  CacheLatest.cpp  Matrix.cpp  ToInput.cpp
Test/DisRegRep-Test/Image/: CMakeLists.txt
Test/DisRegRep-Test/Image/Serialisation/: Bit.cpp  CMakeLists.txt
Test/DisRegRep-Test/Image/Serialisation/Buffer/: Tile.cpp
Test/DisRegRep-Test/Splatting/: CMakeLists.txt  FastFullOccupancy.cpp  GroundTruth.cpp  GroundTruth.hpp  VanillaFullOccupancy.cpp
Test/DisRegRep-Test/Splatting/Convolution/Full/: FastOccupancy.cpp  VanillaOccupancy.cpp
Test/DisRegRep-Test/Splatting/OccupancyConvolution/: CMakeLists.txt
Test/DisRegRep-Test/Splatting/OccupancyConvolution/Full/: CMakeLists.txt  Fast.cpp  Vanilla.cpp
Test/Splatting/: GroundTruth.cpp
